added the Paribahan section

--- a/index.html
+++ b/index.html
@@ -82,6 +82,59 @@
         </div>
 
      </section>
+        <!-- P.H Paribahan -->
+     <section class="lg:w-[1173px] m-auto mt-[50px] lg:mt-[100px] mb-5 lg:mb-10 border border-t-lime-600">
+        <div class=" lg:w-[736px] m-auto lg:mt-5 lg:mb-[60px]">
+            <h1 class="text-center text-[30px] lg:text-[40px] font-bold">P.H Paribahan</h1>
+            <p class="text-center opacity-75">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
+        </div>
+
+        <div class="flex mt-4 mb-8 p-2">
+            <div class="flex space-x-1 w-[560px]">
+                <div><img src="images/bus-logo.png" alt=""></div>
+                <div>
+                    <h2>Greenline Paribahan</h2>
+                    <p>Coach-009-WEB ! AC_Business</p>
+                </div>
+            </div>
+            <div class="flex bg-gray-300 space-x-1 lg:p-3 w-[162px] m-auto rounded-md text-[#1DD100]">
+                <div><img class="w-[22px]" src="images/seat-green.png" alt=""></div>
+                <div class=""><p>40 Seats left</p></div>
+            </div>
+        </div>
+
+        <div class="flex flex-col lg:flex-row bg-[#F7F8F8] ">
+            <div class="space-y-4 border-s-sky-400 border">
+                <div class="flex justify-between lg:justify-between p-2">
+                    <p>Route</p>
+                    <h6>Dhaka - Sylhet</h6>
+                </div> 
+                <div class="flex justify-between lg:justify-between border p-2 border-y-indigo-200">
+                    <p>Departure Time</p>
+                    <h6>9:00 Pm</h6>
+                </div>
+
+                <div class="flex space-x-3 lg:flex-row lg:space-x-2">
+                    <div class="bg-gray-300 w-[189px] lg:w-[232px] p-2 rounded-md text-center items-center"><b class="">Boarding Point-Laxmipur</b></div>
+
+                    <div class="bg-gray-300 w-[189px] lg:w-[232px] p-2 rounded-md text-center items-center"><b class="">Dropping Point - Bogura</b></div>
+
+                    <div class="bg-gray-300 w-[189px] lg:w-[232px] p-2 rounded-md text-center items-center"><b class="">Est. Time - 11 Hour</b></div>
+                    
+                </div>
+    
+            </div>
+            <div class="m-auto lg:pl-[135px] lg:border-l border-s-sky-300">
+                <div><img src="images/fare.png" alt=""></div>
+                <div>
+                    <h3>550 Taka</h3>
+                    <p>per Seat</p>
+                </div>
+            </div>
+        </div>
+     </section>
+
+
     </main>
     <footer>
 
