added the seat section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     </header>
 
     <main>
+
         <!-- offer section -->
      <section class=" mt-[30px] lg:mt-[100px]">
        <div>
@@ -82,6 +83,7 @@
         </div>
 
      </section>
+
         <!-- P.H Paribahan -->
      <section class="lg:w-[1173px] m-auto mt-[50px] lg:mt-[100px] mb-5 lg:mb-10 border border-t-lime-600">
         <div class=" lg:w-[736px] m-auto lg:mt-5 lg:mb-[60px]">
@@ -89,7 +91,7 @@
             <p class="text-center opacity-75">Yes, you can run unit tests and view the results directly within the app. The integrated testing features allow for a streamlined .</p>
         </div>
 
-        <div class="flex mt-4 mb-8 p-2">
+        <div class="flex mt-4 mb-8 p-2 lg:w-[715px] justify-between">
             <div class="flex space-x-1 w-[560px]">
                 <div><img src="images/bus-logo.png" alt=""></div>
                 <div>
@@ -124,7 +126,7 @@
                 </div>
     
             </div>
-            <div class="m-auto lg:pl-[135px] lg:border-l border-s-sky-300">
+            <div class="m-auto mt-4 lg:pl-[135px] lg:border-l border-s-sky-300">
                 <div><img src="images/fare.png" alt=""></div>
                 <div>
                     <h3>550 Taka</h3>
@@ -133,6 +135,92 @@
             </div>
         </div>
      </section>
+
+    <!-- seat section -->
+    <section class="lg:w-[1173px] m-auto mt-[50px] lg:mt-[100px] mb-5 lg:mb-10 space-y-4 flex">
+
+        <!-- bus seat -->
+        <div>
+            <div>
+                <h2 class="font-bold text-2xl">Select Your Seat</h2>
+            </div>
+    
+            <div>
+                <div class="flex justify-between">
+                    <div class="flex">
+                        <div><img src="images/seat-gray.png" alt=""></div>
+                        <p>Available</p>
+                    </div>
+                    <div class="flex">
+                        <div><img src="images/seat-green.png" alt=""></div>
+                        <p class="text-[#1DD100]">Selected</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex justify-end">
+                <div class="w-[96px] rounded-md justify-items-end bg-gray-300">
+                    <img class="m-auto" src="images/wheel.png" alt="">
+                </div>
+            </div>
+            <div class="your-seat">
+                <div class="serial">A</div>
+                <div class="seat">A1</div>
+                <div class="seat">A2</div>
+                <div class="seat">A3</div>
+                <div class="seat">A4</div>
+                <div class="seat">B</div>
+                <div class="seat">B1</div>
+                <div class="seat">B2</div>
+                <div class="seat">B3</div>
+                <div class="seat">B4</div>
+                <div class="serial">C</div>
+                <div class="seat">C1</div>
+                <div class="seat">C2</div>
+                <div class="seat">C3</div>
+                <div class="seat">C4</div>
+                <div class="serial">D</div>
+                <div class="seat">D1</div>
+                <div class="seat">D2</div>
+                <div class="seat">D3</div>
+                <div class="seat">D4</div>
+                <div class="serial">E</div>
+                <div class="seat">E1</div>
+                <div class="seat">E2</div>
+                <div class="seat">E3</div>
+                <div class="seat">E4</div>
+                <div class="serial">F</div>
+                <div class="seat">F1</div>
+                <div class="seat">F2</div>
+                <div class="seat">F3</div>
+                <div class="seat">F4</div>
+                <div class="serial">G</div>
+                <div class="seat">G1</div>
+                <div class="seat">G2</div>
+                <div class="seat">G3</div>
+                <div class="seat">G4</div>
+                <div class="serial">H</div>
+                <div class="seat">H1</div>
+                <div class="seat">H2</div>
+                <div class="seat">H3</div>
+                <div class="seat">H4</div>
+                <div class="serial">I</div>
+                <div class="seat">I1</div>
+                <div class="seat">I2</div>
+                <div class="seat">I3</div>
+                <div class="seat">I4</div>
+                <div class="serial">J</div>
+                <div class="seat">J1</div>
+                <div class="seat">J2</div>
+                <div class="seat">J3</div>
+                <div class="seat">J4</div>
+            </div>
+        </div>
+
+        <!-- your information -->
+        <div>
+            select you Seat
+        </div>
+    </section>
 
 
     </main>
