--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
      </section>
 
     <!-- seat section -->
-    <section class="lg:w-[1173px] m-auto mt-[50px] lg:mt-[100px] mb-5 lg:mb-10 space-y-4 flex">
+    <section class="lg:w-[1173px] m-auto mt-[50px] lg:mt-[100px] mb-5 lg:mb-10 space-y-4 flex justify-between">
 
         <!-- bus seat -->
-        <div>
+        <div class="w-3/5 space-y-4">
             <div>
                 <h2 class="font-bold text-2xl">Select Your Seat</h2>
             </div>
@@ -217,8 +217,64 @@
         </div>
 
         <!-- your information -->
-        <div>
-            select you Seat
+        <div class="w-2/6">
+            <h2 class="font-bold text-2xl mb-5">Select Your Seat</h2>
+            <div class="select-info-container">
+                <div class="space-y-4 bg-gray-100 p-4 rounded-md">
+                    <div class="flex justify-between text-xl font-medium">
+                        <h4>Seat <span>2</span> </h4>
+                        <h4>Class</h4>
+                        <h4>Price</h4>
+                    </div>
+                    <div class="flex justify-between">
+                        <h4>C2</h4>
+                        <h4>Economoy</h4>
+                        <h4>550</h4>
+                    </div>
+                    <div class="flex justify-between text-xl font-semibold">
+                        <h4>Total Price</h4>
+                        <h4>BDT 1100</h4>
+                    </div>
+                    <div>
+                        <label class="input input-bordered flex items-center gap-2">
+                        <input type="text" class="grow" placeholder="Have any copupon?" />
+                        <button class="btn bg-[#1DD100] w-[96px]">Apply</button>
+                        </label>
+                    </div>
+                    <div class="flex justify-between text-xl font-semibold">
+                        <h4>Grand Total</h4>
+                        <h4>BDT 1100</h4>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <label class="form-control w-full max-w-xs">
+                            <div class="label">
+                                <span class="label-text">Passenger Name*</span>
+                            </div>
+                            <input type="text" placeholder="Enter your name" class="input input-bordered w-full max-w-xs" />
+                        </label>
+                        <label class="form-control w-full max-w-xs">
+                            <div class="label">
+                                <span class="label-text">Phone Number*</span>
+                            </div>
+                            <input type="text" placeholder="Enter your phone number" class="input input-bordered w-full max-w-xs" />
+                        </label>
+                        <label class="form-control w-full max-w-xs">
+                            <div class="label">
+                                <span class="label-text">Email ID</span>
+                            </div>
+                            <input type="email" placeholder="Enter your email id" class="input input-bordered w-full max-w-xs" />
+                        </label>
+                        <button class="btn w-[319px] mt-[20px] mb-[20px]">Next</button>
+                    </div>
+                </div>
+                <div>
+                    <div class="flex justify-between text-xs">
+                        <a href="">Terms and Conditions</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
